fix the visibility of the poem

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ section{
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
-
+  /* overflow-x: visible; */
 }
 
 .penampung{
@@ -43,7 +43,8 @@ section{
   padding: 10px;
   transform: translate(-50%,-50%);
   z-index: 100;
-  overflow: scroll;
+  overflow-y: scroll;
+  /* overflow-x: visible; */
 }
 
 .penampung::-webkit-scrollbar{
@@ -72,8 +73,8 @@ section{
   flex-direction: column;
   /* height: 450px; */
   /* padding-bottom: 100px; */
-  overflow: scroll;
-
+  overflow-y: scroll;
+  /* overflow-x: visible; */
 }
 
 #div1::-webkit-scrollbar{
@@ -108,7 +109,9 @@ pre{
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  overflow: scroll;
+  overflow-y: scroll;
+  /* overflow-x: visible;
+  z-index: 2; */
 }
 
 pre::-webkit-scrollbar{
